--- a/styles/new.css
+++ b/styles/new.css
@@ -2,4 +2,42 @@
 *{
     margin: 0px;
     padding: 0px;
+    font-family: 'Work Sans', sans-serif;
+}
+/* header section style */
+header{
+    background-image: url('../images/banner3.png');
+    height: 100vh;
+}
+.header{
+    padding: 220px 230px 50px 845px;
+    text-align: right;
+}
+.headear-title{
+    color: #FFF;
+    font-size: 65px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+.header-description{
+    color: #FFF;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    margin-bottom: 20px;
+}
+.btn-primary{
+    color: #005FAC;
+    font-size: 20px;
+    font-weight: 600;
+    padding: 10px 15px;
+    border: none;
+}
+.btn-primary:hover{
+    color: #ffffff;
+    background-color: #005FAC;
+    font-size: 20px;
+    font-weight: 600;
+    padding: 10px 15px;
+    transition: ease 1s;
 }
